--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec babel-node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --require @babel/register 'src/**/*.spec.js'",
+    "test-server": "TEST_DB=testdb npm start"
   },
   "author": "pascal",
   "license": "MIT",
@@ -30,6 +31,10 @@
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
+    "@babel/register": "^7.9.0",
+    "axios": "^0.19.2",
+    "chai": "^4.2.0",
+    "mocha": "^7.1.1",
     "nodemon": "^1.18.9"
   }
 }
