--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-server-express": "^2.11.0",
     "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
+    "dataloader": "^2.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^14.6.0",
@@ -35,6 +36,6 @@
     "axios": "^0.19.2",
     "chai": "^4.2.0",
     "mocha": "^7.1.1",
-    "nodemon": "^1.18.9"
+    "nodemon": "^2.0.3"
   }
 }
